add 3th section

--- a/index.html
+++ b/index.html
@@ -148,14 +148,62 @@
 	</section>
     
     <div class="container">
-	    <div class="action">
-	    	<div class="left-action">
-	    		<div class="first-bg"></div>
-	    		<div class="second-bg"></div>
+	   <h2 class="trending-title">HAPPENING NOW</h2>
+	    	<div class="action">
+
+		    	<div class="left-action">
+		    		<div class="first-bg">
+		    			<p class="left-title">city</p>
+		    			<h6 >Large article title</h6>
+		    			<p class="city-text">Lorem ipsum dolor sit amet, in eam odio amet, vix id nullam detracto, vidit vituperatoribus duo</p>
+		    			<div class="action-time">
+							 <i class="action-icon fas fa-clock"></i>
+							<p>2 min ago</p>
+						</div>
+		    		</div>
+
+		    		<div class="second-bg">
+		    			<p class="left-title">travel</p>
+		    			<h6>Large article title</h6>
+		    			<p class="city-text">Lorem ipsum dolor sit amet, in eam odio amet, vix id nullam detracto, vidit vituperatoribus duo</p>
+		    			<div class="action-time">
+							 <i class="action-icon fas fa-clock"></i>
+							<p>2 min ago</p>
+						</div>
+
+		    		</div>
+		    	</div>
+
+
+	    	<div class="right-action">
+	    		<div class="small-title-box">
+	    			<img src="image/5.jpg" alt="elepant">
+	    			<p>Small title</p>
+	    			<div class="small-time">
+						<i class="small-icon fas fa-clock"></i>
+						<p>3h ago by Worldnews</p>
+					</div>
+	    		</div>
+
+	    		<div class="small-title-box">
+	    			<img src="image/6.jpg" alt="parrot">
+	    			<p>Small title</p>
+	    			<div class="small-time">
+						<i class="small-icon fas fa-clock"></i>
+						<p>4h ago by Days</p>
+					</div>
+	    		</div>
+
+	    		<div class="small-title-box">
+	    			<img src="image/7.jpg" alt="long-way">
+	    			<p>Small title</p>
+	    			<div class="small-time">
+						<i class="small-icon fas fa-clock"></i>
+						<p>3h ago by Monica</p>
+					</div>
+
+	    		</div>
 	    	</div>
-
-
-	    	<div class="right-action"></div>
 				
 		</div>
 	</div>
