connect two page

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 				<h2 class="background-title">world news</h2>
 				<h3 class="back-second-title">Amazing places in America to visit.</h3>
 				<p>For some reason — this country, this city, this neighborhood, this particular street —  is the place you are living a majority of your life in.</p>
-				<button type="button">LEARN MORE</button>
+				<a href="index2.html"><button type="button">LEARN MORE</button></a>
 			</div>
 		</div>
 
