other part for responsive

--- a/index2.html
+++ b/index2.html
@@ -16,10 +16,13 @@
 <body>
 
 	<!-- here is my navigation content -->
-	<header>
+	<div class="my-header">
 		<div class="left">
+			<div class="burger-icon">
+				<i class="burger fas fa-bars"></i>
+			</div>
 			<div class="page_logo">
-				<a class="logo d-inline-block" href="">
+				<a class="logo d-inline-block" href="index.html">
 					<img src="image/logo.svg" alt="logo">
 				</a>
 			</div>
@@ -42,15 +45,19 @@
 		    </div>
 		</div>
 
-	</header>
+	</div>
 
 	<section class="world-news">
 		<div class="container">
 			<div class="head-of-the-articles">
 				<div class="home-items">
 					<img src="image/home.png" alt="home">
-					  <p><span class="story">STORY</span>/<span class="world-news-title">WORLD NEWS</span></p>
+					<p><span class="story">STORY</span>/<span class="world-news-title">WORLD NEWS</span></p>
 				</div>
+				<div class="arrow">
+					<i class="arrow-left fas fa-arrow-left"></i>
+				</div>
+
 				<div class="filter">
 					<img src="image/filter.png" alt="filter">
 				</div>
@@ -93,16 +100,17 @@
 					<img src="image/Avatar.png" alt="user">
 					<h5>Phasellus eu nulla malesuada, luctus diam.</h5>	
 				</div>
+				<div class="letters">
+					<div class="first-letter-space">
+						<p>Dignissim rutrum ridiculus lacinia phasellus torquent ad aliquet, nisi dictum cubilia class habitasse commodo, semper potenti nec ac per egestas. Ac volutpat ullamcorper phasellus montes sollicitudin litora ridiculus mi conubia inceptos euismod odio curabitur, tortor eros porta venenatis facilisis quam blandit in ut lobortis consequat justo. Hac libero quisque tortor conubia iaculis </p>	
+					</div>
 
-				<div class="first-letter-space">
-					<p>Dignissim rutrum ridiculus lacinia phasellus torquent ad aliquet, nisi dictum cubilia class habitasse commodo, semper potenti nec ac per egestas. Ac volutpat ullamcorper phasellus montes sollicitudin litora ridiculus mi conubia inceptos euismod odio curabitur, tortor eros porta venenatis facilisis quam blandit in ut lobortis consequat justo. Hac libero quisque tortor conubia iaculis </p>	
-				</div>
-
-				<div class="second-letter-space">
-					<p>Nascetur himenaeos morbi gravida porta sapien justo aliquam pellentesque dapibus curae, cursus ultrices suspendisse cras ligula id aenean vulputate taciti, eleifend eros bibendum scelerisque lobortis venenatis nulla tristique tempus. Quisque eleifend vulputate.</p>
-					<div class="time">
-						 <i class="icon-time fas fa-clock"></i>
-						<p>2 min ago</p>
+					<div class="second-letter-space">
+						<p>Nascetur himenaeos morbi gravida porta sapien justo aliquam pellentesque dapibus curae, cursus ultrices suspendisse cras ligula id aenean vulputate taciti, eleifend eros bibendum scelerisque lobortis venenatis nulla tristique tempus. Quisque eleifend vulputate.</p>
+						<div class="time">
+							 <i class="icon-time fas fa-clock"></i>
+							<p>2 min ago</p>
+						</div>
 					</div>
 				</div>
 			</div>
@@ -126,7 +134,7 @@
 		<div class="container2">
 			<div class="footer-left-components">
 				<div class="footer_logo">
-					<a class="logo" href="">
+					<a class="logo" href="index.html">
 						<img src="image/footer.svg" alt="logo">
 					</a>
 				</div>
