--- a/index2.html
+++ b/index2.html
@@ -69,7 +69,7 @@
 						<h2 class="desert-title">world news</h2>
 						<p class="second-title">Lorem ipsum dolor sit amet, in eam odio amet, </p>
 						<div class="autor">
-					        <img src="image/Avatar.png" alt="user">
+					        <img src="image/avatar.png" alt="user">
 					    </div>
 					</div>
 				</div>
@@ -97,7 +97,7 @@
 		<div class="container">
 			<div class="flexible">
 				<div class="first-info">
-					<img src="image/Avatar.png" alt="user">
+					<img src="image/avatar.png" alt="user">
 					<h5>Phasellus eu nulla malesuada, luctus diam.</h5>	
 				</div>
 				<div class="letters">
