--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 			</div>
 			<div class="page_logo">
 				<a class="logo" href="index.html">
-					<img src="image/new_logo.svg" alt="logo">
+					<img src="image/main_logo.svg" alt="logo">
 				</a>
 			</div>
 		</div>
@@ -55,7 +55,7 @@
 				<h2 class="background-title">world news</h2>
 				<h3 class="back-second-title">Amazing places in America to visit.</h3>
 				<p>For some reason — this country, this city, this neighborhood, this particular street —  is the place you are living a majority of your life in.</p>
-				<button onclick="window.location.href='index2.html'">LEARN MORE</button>
+				<button onclick="window.location.href='post.html'">LEARN MORE</button>
 			</div>
 		</div>
 
