--- a/post.html
+++ b/post.html
@@ -23,7 +23,7 @@
 			</div>
 			<div class="page_logo">
 				<a class="logo d-inline-block" href="index.html">
-					<img src="image/logo.svg" alt="logo">
+					<img src="image/main_logo.svg" alt="logo">
 				</a>
 			</div>
 		</div>
@@ -54,9 +54,7 @@
 					<img src="image/home.png" alt="home">
 					<p><span class="story">STORY</span>/<span class="world-news-title">WORLD NEWS</span></p>
 				</div>
-				<div class="arrow">
-					<i class="arrow-left fas fa-arrow-left"></i>
-				</div>
+				<a class="arrow"  href="index.html"><i class="arrow-left fas fa-arrow-left"></i></a>
 
 				<div class="filter">
 					<img src="image/filter.png" alt="filter">
