checked my code  and done!

--- a/index.html
+++ b/index.html
@@ -18,12 +18,14 @@
 	<!-- here is my navigation content -->
 	<header>
 		<div class="left">
-			<div class="burger-icon">
-				<i class="burger fas fa-bars"></i>
+			<div class="toggle-nav">
+				<span></span>
+				<span></span>
+				<span></span>
 			</div>
 			<div class="page_logo">
 				<a class="logo" href="index.html">
-					<img src="image/main_logo.svg" alt="logo">
+					<img src="image/logo.svg" alt="logo">
 				</a>
 			</div>
 		</div>
@@ -95,7 +97,6 @@
 					
 				</div>
 
-			</div>
 			</div>
 		</div>
 	</section>
@@ -281,7 +282,9 @@
 	    </div>
 	</footer>
 
-	<script src="js/main2.js"></script>
+
+	<script src="js/jquery.min.js"></script>
+	<script src="js/main.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-2/js/all.min.js"> </script>
 </body>
 </html>
