--- a/post.html
+++ b/post.html
@@ -18,9 +18,6 @@
 	<!-- here is my navigation content -->
 	<div class="my-header">
 		<div class="left">
-			<div class="burger-icon">
-				<i class="burger fas fa-bars"></i>
-			</div>
 			<div class="page_logo">
 				<a class="logo d-inline-block" href="index.html">
 					<img src="image/main_logo.svg" alt="logo">
@@ -206,7 +203,7 @@
 	    </div>
     </footer>
 
-	<script src="js/main2.js"></script>
+	<script src="js/main.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-2/js/all.min.js"> </script>
 
 </body>
