--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 			</div>
 			<div class="page_logo">
 				<a class="logo" href="index.html">
-					<img src="image/logo.svg" alt="logo">
+					<img src="image/main_logo.svg" alt="logo">
 				</a>
 			</div>
 		</div>
